Add manifest_skip and readme_from to Makefile.PL

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.16
+date:    
+changes:
+- Add manifest_skip and readme_from to Makefile.PL
+---
 version: 0.15
 date:    Thu Sep  9 18:08:33 PDT 2010
 changes:
