update change log

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ version: 0.17
 date:    Mon Sep  5 09:44:44 BST 2011
 changes:
 - Add XXX_skip for XXX proxying.
+- Released from Liz++ and Wendy++'s guest bedroom.
 ---
 version: 0.16
 date:    Fri Aug 19 20:50:09 EEST 2011
