--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.21
+date:    Sun Aug  3 22:55:10 PDT 2014
+changes:
+- Remove (c) from Copyright
+- Finish doc to Swim
+---
 version: 0.20
 date:    Sat Aug  2 11:20:35 PDT 2014
 changes:
