--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.23
+date:    Sat Aug 16 03:42:01 PDT 2014
+changes:
+- Eliminate spurious trailing whitespace
+---
 version: 0.22
 date:    Fri Aug 15 15:51:59 PDT 2014
 changes:
