--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.24
+date:    Sat Aug 16 11:11:13 PDT 2014
+changes:
+- Meta 0.0.2
+---
 version: 0.23
 date:    Sat Aug 16 03:42:01 PDT 2014
 changes:
