--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.25
+date:    Sat Aug 16 15:34:45 PDT 2014
+changes:
+- Remove 'use 5.x.x' from code
+---
 version: 0.24
 date:    Sat Aug 16 11:11:13 PDT 2014
 changes:
